Fix user and location collections validation
