# server.js
@@ -1,20 +1,22 @@
-const bookingsRouter = require("./routes/bookingRoutes.js");
+// const bookingsRouter = require('./routes/bookingRoutes.js');
 const { connectToDB } = require('./config/database.js');
 const locationRoute = require('./routes/locationRoutes.js');
 const express = require('express');
 const dotenv = require('dotenv');
 const swaggerUi = require('swagger-ui-express');
 const swaggerDocument = require('./swagger.json');
+const authRoute = require('./routes/authRoutes.js');
 
-const userRoutes = require("./routes/userRoutes");
+const userRoutes = require('./routes/userRoutes.js');
 
 dotenv.config();
 
 const app = express();
 app.use(express.json());
-app.use('/api', locationRoute);
 
-app.use("/api", userRoutes);
+app.use('/api', locationRoute);
+app.use('/api', authRoute);
+app.use('/api', userRoutes);
 
 app.use('/api-docs', swaggerUi.serve, swaggerUi.setup(swaggerDocument));
 
@@ -24,15 +26,10 @@ app.get('/', (req, res) => {
   });
 });
 
-app.use("/api/bookings", bookingsRouter);
+// app.use('/api', bookingsRouter);
 
-const PORT = process.env.PORT || 3000;
+const port = process.env.PORT || 3000;
 
-const appInit = async () => {
-  await connectToDB();
-  app.listen(PORT, () => {
-    console.log(`Server running on port ${PORT}`);
-  });
-};
-
-appInit();
+connectToDB().then(() => {
+  app.listen(port, () => console.log('Listening on port', port));
+});
